Transform node after Point Instance causes issues #87094

Closed
opened 2021-03-31 18:19:07 +02:00 by Erindale · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-31 07:46, hash: 645fc0c767
Worked: Yesterday's build

Short description of error
Instancing an object and then using a transform node AFTERWARDS will transform the instances, not the whole object as a block.
Video shows transform only effecting the instanced brick scales, instead of scaling down the whole wall. (Translation appears to work but that would look the same regardless)

2021-03-31 17-10-07.mp4

Exact steps for others to reproduce the error
Add a cube, instance a cube on the corners. Add a transform node and try to rotate the entire instancer with instances. Only the instances will rotate about their positions.

Test file: TransformBug.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-31 07:46, hash: `645fc0c767` Worked: Yesterday's build **Short description of error** Instancing an object and then using a transform node AFTERWARDS will transform the instances, not the whole object as a block. Video shows transform only effecting the instanced brick scales, instead of scaling down the whole wall. (Translation appears to work but that would look the same regardless) [2021-03-31 17-10-07.mp4](https://archive.blender.org/developer/F9916037/2021-03-31_17-10-07.mp4) **Exact steps for others to reproduce the error** Add a cube, instance a cube on the corners. Add a transform node and try to rotate the entire instancer with instances. Only the instances will rotate about their positions. Test file: [TransformBug.blend](https://archive.blender.org/developer/F9916060/TransformBug.blend)
Author

Added subscriber: @Erindale

Added subscriber: @Erindale
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

@Erindale Could you add the test .blend file to the report. That would be helpful. Thank you.

@Erindale Could you add the test `.blend` file to the report. That would be helpful. Thank you.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2021-03-31 18:31:22 +02:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Thanks for the report! Fix incoming

Thanks for the report! Fix incoming

This issue was referenced by 46ee9b599a

This issue was referenced by 46ee9b599aeec6400bf6ff7d87431d71fb87a2e0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87094
No description provided.