Fix T87094: Transforming geometry instances component is broken

Caused by an incorrect transformation order in cleanup commit
rBd037fef3bd1dc2e. The fix is to simply reverse the order.